# cvflow

./: .gitignore  Meta.py  README.META.md  README.PIPELINE.md  README.md  download_checkpoints.py  download_checkpoints.sh  exceptions.py  pipeline.py  pyproject.toml  requirements.txt
.github/: .gitignore
.github/workflows/: ci.yml
common/: ctc_decoder.py  famlinn.py  parser.py  prepare_plates_data.py  utils.py
components/: ComponentBase.py  ModelComponent.py  MuxerComponent.py  OuterComponent.py  PainterComponent.py  README.md  ReaderComponent.py  component_base.py  handler_component.py  model_component.py  muxer_component.py  outer_component.py  painter_component.py  reader_component.py  tracker_component.py
examples/: ImageNetClasses.csv  Readme.md  classification_example.py  defects_example.py  detection_example.py  objects_counter_example.py  plates_detection_example.py  segmentation_example.py  set_stream.py  stereo_example.py  tracker.py
examples/defects_example/: README.md  run.py  train.py
finetuning_pipelines/: plates_training_pipeline.py
gui/: calibration.py  roi_getter.py
models/: blocks.py  common.py  ganet_model.py  layers.py  mobilestereonet_model.py  models.py  plates_model.py  preprocessing.py  utils.py  vehicles_classifier.py  yolo.py
multicam-detection/: README.md  run.py  set_stream.py  yolo.py
objects-counter/: README.md  conf_marks  run.py  set_stream.py  yolo.py
tests/: handle_component_test.py  meta_test.py  model_component_test.py  muxer_component_test.py  painter_component_test.py  reader_component_test.py
(+228 files in other folders)
