[tool.poetry]
name = "cvflow"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.18, <3.9"
opencv-python = "^4.8.0.76"
numpy = "^1.24.4"
scipy = "^1.10.1"
scikit-learn = ">=1.3.0,<1.4.0"
chardet = "^5.2.0"
charset-normalizer = "^3.3.2"
tqdm = ">=4.65.0,<4.66.0"
pillow = ">=9.3.0,<9.4.0"
pyzbar = ">=0.1.9,<0.2.0"
pandas = ">=1.3.5,<1.4.0"
requests = ">=2.28.2,<2.29.0"
pyyaml = ">=6.0.1,<6.1.0"
torch = ">=2.2.0,<2.3.0"
ultralytics = ">=8.2.28,<8.3.0"
matplotlib = ">=3.7.2,<3.8.0"
seaborn = ">=0.12.2,<0.13.0"
mmcv = ">=2.0.1,<2.1.0"
scikit-image = ">=0.21.0,<0.22.0"
tensorboardx = ">=2.6.1,<2.7.0"
easyocr = ">=1.7.0,<1.8.0"
dlib = ">=19.24.2,<19.25.0"
segmentation-models-pytorch = ">=0.3.3,<0.4.0"
gdown = "^5.2.0"
ipython = ">=8.12.0,<8.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
